Basic port to 1.18, worldgen compile errors not yet fixed, nothing is tested.